--- a/.github/workflows/oppgave_16.yml
+++ b/.github/workflows/oppgave_16.yml
@@ -20,5 +20,5 @@ jobs:
       - name: Login via Az module
         uses: azure/login@v1
         with:
-          cred: ${{ secrets.AZURE_CREDENTIALS }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
           enable-AzPSSession: true
