enda en ny versjon av oppgave_16.yml

--- a/.github/workflows/oppgave_16.yml
+++ b/.github/workflows/oppgave_16.yml
@@ -9,7 +9,7 @@ jobs:
       run:
         shell: pwsh
         working-directory: ${{ github.workspace }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
