--- a/.github/workflows/oppgave_17.yml
+++ b/.github/workflows/oppgave_17.yml
@@ -29,4 +29,4 @@ jobs:
           modules-to-cache: Az.Storage, Az.Functions, Az.Websites, Az.Resources, Az.Accounts
 
       - name: Deploy Function app
-        run: ./src/funcApp/deployWithBicep.ps1 -firstName "kmn" -resourceGroupName "Kjell-Magne-workshop-hsfsl26amgekw"
+        run: ./src/funcApp/deployWithBicep.ps1 -firstName 'kmn' -resourceGroupName 'Kjell-Magne-workshop-hsfsl26amgekw'
