Rettet feil i oppgave 18

--- a/.github/workflows/oppgave_18.yml
+++ b/.github/workflows/oppgave_18.yml
@@ -29,7 +29,7 @@ jobs:
         uses: azure/powershell@v1 
         with:
           inlineScript: |
-            Disconnect-AzAccount -Scope CurrenUser
+            Disconnect-AzAccount -Scope CurrentUser
             az Logout
             az cache purge
             az account clear
